[package]
name = "data_processor"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
log = "0.4.28"
redis = { version = "0.32.7", features = ["tokio-comp", "connection-manager"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
tokio = { version = "1.48.0", features = ["full"] }
chrono = { version = "0.4.42", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
env_logger = "0.11.8"
rdkafka = { version = "0.38.0", features = ["tokio", "cmake-build"] }
anyhow = "1.0.100"
clickhouse = "0.13.3"
