[package]
name = "geyser_tx_streamer"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"
env_logger = "0.11.8"
log = "0.4.28"
rdkafka = { version = "0.38.0", features = ["tokio", "cmake-build"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
yellowstone-grpc-client = "10.1.1"
yellowstone-grpc-proto = "10.1.1"
solana-sdk = "3.0.0"
futures = "0.3.31"
base64 = "0.22.1"