[package]
name = "historian"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"
env_logger = "0.11.8"
log = "0.4.28"
rdkafka = { version = "0.38.0", features = ["tokio", "cmake-build"] }
redis = { version = "0.32.7", features = ["tokio-comp", "connection-manager"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
futures = "0.3.31"
solana-client = "3.0.10"
solana-sdk = "3.0.0"
thiserror = "2.0.17"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
borsh = "1.6.0"
spl-token-metadata-interface = "0.8.0"
spl-token-2022 = "10.0.0"
reqwest = "0.12.24"
solana-account-decoder = "3.1.3"
mpl-token-metadata = "5.1.1"
