[package]
name = "pub_api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.6", features = ["ws"] }
dotenvy = "0.15.7"
env_logger = "0.11.8"
log = "0.4.28"
redis = { version = "0.32.7", features = ["tokio-comp", "connection-manager"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors"] }
tokio-stream = "0.1.17"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
